...
            android:text="First Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="50dp"

            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your First Name"
...
            android:text="Last Name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/edittext_bg"
            android:ems="10"
            android:hint="Enter your Last Name"
            android:inputType="text"
...
            android:text="Date of Birth"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="match_parent"
            android:layout_height="109dp"
            android:calendarViewShown="false"
            android:datePickerMode="spinner"
            android:spinnersShown="true" />

...
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male"
                tools:ignore="TouchTargetSizeCheck" />

...
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Spinner
            android:id="@+id/BloodTypes"
            android:layout_width="wrap_content"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/add_a_description"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/savebutton"
            style="@android:style/Widget.Button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="40dp"
...
