...
            android:layout_marginTop="5dp"
            android:text="Forgot Password?"
            android:textAlignment="center"
            android:visibility="invisible"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/Loginbutton"
            style="@android:style/Widget.Button"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_bg"
...
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Dont have an Account?"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:clickable="true"
                android:text="SignUp"
                android:textColor="@color/medication_end"
...
