...
    <integer name="max_med_quantity">5</integer>
    <integer name="max_med_dosage">500</integer>
    <integer name="max_substance_quantity">500</integer>
    <integer name="max_notes_length">1000</integer>

    <string-array name="blood_types">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
...
